recupero després de desfer tots commits menys inicial

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <p>Initial commit</p>
+    <p>commit per recuperar styles.scss, deixat fora de primer commit</p>
+    <p>ara git rm</p>
+    <p>ara farem commit per desfer</p>
+    <p>aquest commit substitueix l'anterior amb amend</p>
+
 </body>
 </html>
