--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <p>ara git rm</p>
     <p>ara farem commit per desfer</p>
     <p>aquest commit substitueix l'anterior amb amend</p>
-
+<p>commit</p>
 </body>
 </html>
