commit nou guai

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <p>ara farem commit per desfer</p>
     <p>aquest commit substitueix l'anterior amb amend</p>
 <p>commit</p>
+<p>stash</p>
+<p>afegit despres d noob</p>
+<p>diferència</p>
 </body>
 </html>
