Commit amb rebase -i
This reverts commit 3a3e583e6a67bb02739b83f4632a6e367df12ae5.

abans d rebase s

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <p>ara git rm</p>
     <p>ara farem commit per desfer</p>
     <p>aquest commit substitueix l'anterior amb amend</p>
-<p>commit</p>
-<p>stash</p>
+
+<p>stush</p>
 <p>afegit despres d noob</p>
 <p>diferència</p>
+<p>afegit durant rebase</p>
+p{afegeixo més abans de provar git rebase --s}
+
 </body>
 </html>
