--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <p>ara git rm</p>
     <p>ara farem commit per desfer</p>
     <p>aquest commit substitueix l'anterior amb amend</p>
-
-<p>stush</p>
+<p>commit</p>
+<p>stash</p>
 <p>afegit despres d noob</p>
 <p>diferència</p>
-<p>afegit durant rebase</p>
-p{afegeixo més abans de provar git rebase --s}
-
+<p>afegit en rebase e</p>
 </body>
 </html>
