--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <p>diferència</p>
 <p>afegit en rebase e</p>
 <p>afegit 1</p><p>afegeixo rebase</p>
+<p>afegit 2</p><p>afegeixo, pro no a seguent</p>
 </body>
 </html>
