--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <p>diferència</p>
 <p>afegit en rebase e</p>
 <p>afegit 1</p><p>afegeixo rebase</p>
-<p>afegit 2</p><p>afegeixo, pro no a seguent</p>
+<p>afegit 2</p>
+<p>afegit 3</p><p>afegeixo 3 amend</p>
 </body>
 </html>
