commit after first push

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 <p>afegit 3</p><p>afegeixo 3 amend</p>
 <p>prova branca1</p>
 <p>prova branca1 2</p>
+<p>commit after first push</p>
 </body>
 </html>
